front page development

--- a/configs.tex
+++ b/configs.tex
@@ -144,3 +144,8 @@
 \captionsetup[figure]{position=bottom}
 
 % \usepackage[backend=bibtex]{biblatex}
+
+\usepackage[english]{babel}
+\newcommand{\lat}{\selectlanguage{english}}
+
+\newcommand{\campusaddress}{Lalitpur, Nepal}
