--- a/frontmatter/titlepages/dissertation.tex
+++ b/frontmatter/titlepages/dissertation.tex
@@ -1,36 +1,56 @@
 \begin{titlepage}
 
 \begin{center}
-\includegraphics[height = 2cm]{frontmatter/images/tu.jpg} 
+\includegraphics[height = 6cm]{frontmatter/images/tu.jpg} 
+
+\linespread{1}
+
+\bf{
+    % \vspace{0.5cm}
+
+\MakeUppercase{\myuniversity}
+    % \vspace{0.3cm}
+
+\MakeUppercase{\myinstitute, \mycampus }
+
+\MakeUppercase{ \campusaddress}
+\begin{flushleft}
+    \roll    
+\end{flushleft}
+
+
+% \mysubtitle
 
 \vspace{1cm}
 
-{\LARGE
-\textsc{\thetitle}}\\
+{\lat \MakeUppercase{\large{\thetitle}}}\\
 
-\vspace{0.5cm}
 
-\mysubtitle
+\vspace{.5cm}
+{BY}
 
-\vspace{3.5cm}
+\MakeUppercase{\theauthor}
 
-\uppercase{\bf{\theauthor}}
+\vspace{.5cm}
 
-\vspace{3.5cm}
-
-{\bf{Supervisor}} \\
-\myadvisorA
+% {Supervisor} \\
+% \myadvisorA
 
 \vspace{4cm}
 
-{\em This Thesis is carried out as a part of the education at the \myuniversity \: and is therefore approved as a part of this education. However, this does not imply that the University answers for the methods that are used or the conclusions that are drawn.}
-
+% {\em This Thesis is carried out as a part of the education at the \myuniversity \: and is therefore approved as a part of this education. However, this does not imply that the University answers for the methods that are used or the conclusions that are drawn.}
+{SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND
+COMPUTER ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE DEGREE OF MASTER OF SCIENCE IN COMPUTER SCIENCE AND KNOWLEDGE ENGINEERING
+}
 \vspace{1.5cm}
 
-\myuniversity, \thedate \\
-\myinstitute \\
-\mycampus \\
-\mydepartment
-
+NOVEMBER,
+\thedate
+% \myuniversity, \thedate \\
+% \myinstitute \\
+% \mycampus \\
+% \mydepartment
+}
 \end{center}
+ % Bold Faced
 \end{titlepage}
