--- a/mainmatter/3-Methodology/sections/deepnet.tex
+++ b/mainmatter/3-Methodology/sections/deepnet.tex
@@ -34,7 +34,7 @@
   
   Equivariance property of \acrshort{cnn} is caused due to parameter sharing. It is defined as a property defined as when the input is translated, so is the output. When processing some time-series data the convolution produces a timeline sequence of features that appear in the input. For example, the convolution operations in movie will produce the feature timeline for the picture pixels.
 
-  This research uses \acrfull{cnn} to learn the sequential representation of drug and proteins. As the primary structure of proteins and drugs are in fact representations of their 2D representations, the convolution operation will help to learn such features for further analysis. Again, 3D representations are also learned by higher layers of convolution layers. \cite{Adhikari2017}
+  This research uses \acrfull{cnn} to learn the sequential representation of drug and proteins. As the primary structure of proteins and drugs are in fact representations of their 2D representations, the convolution operation will help to learn such features for further analysis. Again, 3D representations are also learned by higher layers of convolution layers. \citep{Adhikari2017}
 
 
 \iffalse
