--- a/tips.tex
+++ b/tips.tex
@@ -43,7 +43,7 @@ Write the text and put a footnote this way \footnote{Note explanation}
 
 % Citation
 
-Use the function \cite{gowar1989power}, where \emph{gowar1989power} is the reference inserted in the sample.bib file.
+Use the function \citep{gowar1989power}, where \emph{gowar1989power} is the reference inserted in the sample.bib file.
 
 % Equation
 
