--- a/mainmatter/3-Methodology/sections/kiba.tex
+++ b/mainmatter/3-Methodology/sections/kiba.tex
@@ -45,4 +45,11 @@ where,  [{S}] is the experimental substrate concentration and K\textsubscript{m}
 \fi
 
 
-All the bioactivity types are available from CHEMBL\citep{Gaulton2017}. Based on interaction data available, we remove the unknown values and obtained a total of 180244 interaction KIBA score values in the range of -3.09 to 17.8. With the standard deviation of 1.22, it represents a total of \arabic{no_proteins} proteins and \arabic{no_drugs} drugs.
+All the bioactivity types are available from CHEMBL\citep{Gaulton2017}. Based on interaction data available, we remove the unknown values and obtained a total of \arabic{no_interactions} interaction KIBA score values in the range of -3.09 to 17.8. With the standard deviation of 1.22, it represents a total of \arabic{no_proteins} proteins and \arabic{no_drugs} drugs.
+
+\begin{figure}
+  \label{fig:interactions_summary}
+  \centering
+  \includegraphics[width=.7\textwidth]{dataset/images/interactions_summary.png}
+  \caption{Bar Chart: Interactions of available dataset}
+\end{figure}
