--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion}
+\chapter{Conclusions}
 
 The research was conducted for series of experiments using different CNN architectures and validated using four different settings of drug and protein combinations. The experiments show that the network requires past knowledge on proteins and drugs to yield the best results. The model could yield best scores when both the protein and drug were present in the training phase. We also conclude that if the domain has fewer parameters to learn from, we can represent them in new dimensions to achieve better results in machine learning problem.
 
@@ -8,7 +8,8 @@ Finally, it concludes that:
     \item Same filter size of 8 can be used to train the CNN layer for both proteins and drugs.
 \end{itemize}
 
-\section{Future Works}
+\chapter{Recommendations}
+% \section{Future Works}
 
-We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. The different feature sets on chemical values of drugs can be used to represent a much broader spectrum of drug molecule representation. In case of protein, protein folds could be the incorporated information which could be supplemented for the available 3D protein structures and a good prediction algorithm chosen for \citep{CASP82008}. For the features being evaluated the Grid-Search CV could be applied over various algorithms and Stacking Generalization can be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
+We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. The different feature sets on chemical values of drugs can be used to represent a much broader spectrum of drug molecule representation. In case of protein, protein folds could be the incorporated information which could be supplemented for the available 3D protein structures and a good prediction algorithm chosen for CASP\citep{CASP82008}. For the features being evaluated the Grid-Search CV could be applied over various algorithms and Stacking Generalization can be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
 
