--- a/mainmatter/common.tex
+++ b/mainmatter/common.tex
@@ -1,6 +1,8 @@
 \newcounter{no_drugs}
-\setcounter{no_drugs}{52498}
+\setcounter{no_drugs}{2111}
+\newcounter{no_interactions}
+\setcounter{no_interactions}{118254}
 \newcounter{no_proteins}
-\setcounter{no_proteins}{254}
+\setcounter{no_proteins}{229}
 \newcounter{best_ci}
 \setcounter{best_ci}{87}
