--- a/mainmatter/4-Results/results.tex
+++ b/mainmatter/4-Results/results.tex
@@ -1,4 +1,4 @@
-\chapter{Experiments and Results}
+\chapter{Results}
 
 
 \section{Experiments}
@@ -13,7 +13,7 @@ One-Hot Encodings
 Modfied n-grams skip-grams
 \fi
 
-The focus of the experiments are concentrated on the properties of protein as they have complex structures. The binding of protein and drug depend on various attributes of protein like acidity, hydrophobicity, binding pockets etc and the structure of drug. The attributes are quite closely related to primary and secondary structure of protein themselves. Therefore, our model aims to relate all these multiple components with matrix representation and confirming to Figure ~\ref{fig:kiba_drug_protein} prediction.
+The focus of this research is on the properties of protein owing to its' complex structures. The binding of protein and drug depend on various attributes of protein such as acidity, hydrophobicity, binding pockets and the structure of drug. The attributes are quite closely related to primary and secondary structure of protein themselves. Therefore, our model aims to relate all these multiple components with matrix representation and confirming to Figure ~\ref{fig:kiba_drug_protein} prediction.
 
 \subsection{Features Selection}
 \subsubsection{Primary Feature Selection}
@@ -186,6 +186,8 @@ The deep learning method was implemented with various filter sizes of Convolutio
     \end{tabular}
     \label{table:results}
 \end{table}
+
+Thus we obtain four different models for prediction of drug and protein interaction. The correct model to choose will depend on type of drug and protein fed into the learning algorithm.
 
 \subsubsection{Performance of optimizers in Setting 1}
 
