--- a/mainmatter/4-Results/results.tex
+++ b/mainmatter/4-Results/results.tex
@@ -13,7 +13,7 @@ One-Hot Encodings
 Modfied n-grams skip-grams
 \fi
 
-The focus of this research is on the properties of protein owing to its' complex structures. The binding of protein and drug depend on various attributes of protein such as acidity, hydrophobicity, binding pockets and the structure of drug. The attributes are quite closely related to primary and secondary structure of protein themselves. Therefore, our model aims to relate all these multiple components with matrix representation and confirming to Figure ~\ref{fig:kiba_drug_protein} prediction.
+The focus of this research is on the properties of protein owing to its' complex structures. The binding of protein and drug depend on various attributes of protein such as acidity, hydrophobicity, binding pockets and the structure of drug. The attributes are closely related to primary and secondary structure of protein themselves. Therefore, our model aims to relate these multiple components with matrix representation and to confirm to predictions made as per Figure ~\ref{fig:kiba_drug_protein} prediction.
 
 \subsection{Features Selection}
 \subsubsection{Primary Feature Selection}
@@ -29,7 +29,7 @@ These are the structural components of protein especially related to alpha and b
 
 
 \subsubsection{Stacked Features}
-Basically, we implement the architecture in Figure ~\ref{fig:dlm} for our model design. It is implemented in Python using the TensorFlow framework consisting of keras. The training contained of 200 epochs. The learning rates and early stopping were manipulated in the training process by using keras callback functions. The training and testing was done using a 5-fold cross-validation set prepared manually. To evaluate the performance of the model, we used concordance index(CI)\citep{Xu2015} as defined by equation~\ref{eq:ci}:
+The architecture as per Figure ~\ref{fig:dlm} was implemented for our model design via Python using the TensorFlow framework consisting of keras. The training contained of 200 epochs. The learning rates and early stopping were manipulated in the training process by using keras callback functions. The training and testing was performed using a 5-fold cross-validation set prepared manually. To evaluate the performance of the model, we used concordance index(CI)\citep{Xu2015} as defined by equation~\ref{eq:ci}:
 \begin{equation}
     CI = \frac{1}{Z} \sum_{\delta_i > \delta_j} h(b_i - b_j)
     \label{eq:ci}
@@ -121,12 +121,12 @@ The method proposed by this research, \acrfull{featdti} contains 3 \acrfull{cnn}
 % Trainable params: 2,344,897
 % Non-trainable params: 0
 
-The deep learning method was implemented with various filter sizes of Convolutional Layer of Protein and Drugs. The different sizes were chosen as the lengths of drugs' canonical SMILES sequence and proteins' FASTA sequence differ. Only the comparable results have been shown in table \ref{table:results}. The training and validation plots under different settings is clearly shown by Figure \ref{fig:ci_curve}. The different settings described by Figure \ref{fig:train_val} are:
+The deep learning method was implemented with various filter sizes of Convolutional Layer of Protein and Drugs. The different sizes were chosen as the lengths of drugs' canonical SMILES sequence and proteins' FASTA sequence differ. Only the comparable results are shown in table \ref{table:results}. The training and validation plots under different settings is clearly shown in Figure \ref{fig:ci_curve}. The different settings described by Figure \ref{fig:train_val} are:
 \begin{itemize}
     \item Setting 1 (S1): The validation proteins and drugs appear in training set.
-    \item Setting 2 (S2): The validation Protein is seen in training set but validation drugs aren't present while training.
+    \item Setting 2 (S2): The validation Protein is seen in training set but validation drugs are not present while training.
     \item Setting 3 (S3): The validation Protein is absent in training set but validation drugs are present in training set.
-    \item Setting 4 (S4): The validation Protein and Drugs don't appear in training set
+    \item Setting 4 (S4): The validation Protein and Drugs do not appear in training set.
 \end{itemize}
 
 \begin{figure}[tbp]
@@ -274,7 +274,7 @@ The comparison between the scores evaluated in same dataset has been compared an
     \label{fig:train_val_loss_plot}
 \end{figure}
 
-Similarly, the prediction scores and actual scores for validation sets is shown in Figure ~\ref{fig:val_train}
+Similarly, the prediction scores and actual scores for validation sets are shown in Figure ~\ref{fig:val_train}
 \begin{figure}[H]
     \subfloat[Testing Actual Scores]{
         \includegraphics[width=.3\textwidth]{mainmatter/4-Results/images/val_y.png}
