--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -11,5 +11,5 @@ Finally, it concludes that:
 \chapter{Recommendations}
 % \section{Future Works}
 
-We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. The different feature sets on chemical values of drugs can be used to represent a much broader spectrum of drug molecule representation. In case of protein, protein folds could be the incorporated information which could be supplemented for the available 3D protein structures and a good prediction algorithm chosen for CASP\citep{CASP82008}. For the features being evaluated the Grid-Search CV could be applied over various algorithms and Stacking Generalization can be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
+At present, the sample space of~\acrfull{nfl} has been explored by forming the different feature-sets. The different feature sets on chemical values of drugs can be used to represent a much broader spectrum of drug molecule representation. In case of protein, protein folds could be the incorporated information which could be supplemented for the available 3D protein structures and a good prediction algorithm chosen for CASP\citep{CASP82008}. For the features being evaluated, the Grid-Search CV could be applied over various algorithms and Stacking Generalization could be used to create a better optimized machine learning solution to predict protein-drug interaction score from sequence information. Successively, important is a correct modeling of Pharmacophore modeling of drug-proteins pairs so that it can be applied directly to medical supervisions. 
 
